--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </ul>    
     </nav>
     <div class="container">
-        <img src="/Figma/Luxary Travel with Yacht/Imgs/Hero Image.png" alt="Hero Image" class="hero_img">
+        <img src="Imgs/Hero Image.png" alt="Hero Image" class="hero_img">
         <h1>Luxury Travel with Yacht</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget libero feugiat, faucibus libero id, scelerisque quam</p>
         <button type="button" class="btn">Learn More</button>
